--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -54,7 +54,8 @@
                         {!$Label.c.BTN_Request_to_refer}
                     </button>
                     <aura:set attribute="else">
-                        <button class="apollo-btn tertiary btn-refer-patient"
+                        <button data-hcpe-Id="{!v.studySiteWrapper.hcpe.Id}"
+                                class="apollo-btn tertiary btn-refer-patient"
                                 disabled="{!v.studySiteWrapper.actions.refer.disabled}"
                                 title="{!v.studySiteWrapper.actions.refer.disableReason}"
                                 onclick="{!c.navigateToReferring}">
