--- a/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
+++ b/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
@@ -5,10 +5,11 @@
     <aura:attribute name="therapeuticAreas" type="Therapeutic_Area__c[]" default="[]"/>
     <aura:attribute name="displayFooter" type="Boolean" default=""/>
     <aura:attribute name="bypass" type="Boolean" default=""/>
+
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
-
-    <!--<aura:registerEvent name="setDefaultPage" type="c.setDefaultPage"/>-->
+    <aura:method name="show" action="{!c.show}"/>
+    <aura:method name="hide" action="{!c.hide}"/>
 
     <c:Popup aura:id="searchModal" title="Select Your Conditions of Interest" size="medium" showClose="false" primaryButtonLabel="Save">
 
@@ -18,22 +19,9 @@
             You may only select to 5 conditions at any time.
         </div>
         <table aria-multiselectable="true"
-               class="slds-table slds-table_header-hidden slds-table_bordered slds-table_edit slds-tree slds-table_tree"
+               class="slds-table slds-table_header-hidden slds-table_edit slds-tree slds-table_tree"
                role="treegrid">
             <tbody>
-            <!--<aura:iteration items="{!v.therapeuticAreas}" var="ta">-->
-            <!--<tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"-->
-            <!--tabindex="0">-->
-            <!--<td class="slds-text-align_right" role="gridcell" style="width: 3.25rem;">-->
-            <!--<div class="slds-checkbox">-->
-            <!--&lt;!&ndash;<lightning:input label="" type="checkbox" checked="true"/>&ndash;&gt;-->
-            <!--</div>-->
-            <!--</td>-->
-            <!--<th class="slds-tree__item" data-label="Account Name" scope="row">-->
-            <!--<div class="slds-truncate" title="Rewis Inc">{!ta.Name}</div>-->
-            <!--</th>-->
-            <!--</tr>-->
-            <!--</aura:iteration>-->
 
             <aura:iteration items="{!v.displayedItems}" var="ta">
                 <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"
@@ -44,7 +32,7 @@
                         </div>
                     </td>
                     <th class="slds-tree__item" data-label="Account Name" scope="row">
-                        <div class="slds-truncate" title="Rewis Inc">{!ta.therArea.Name}</div>
+                        <div class="slds-truncate">{!ta.therArea.Name}</div>
                     </th>
                 </tr>
             </aura:iteration>
