--- a/force-app/main/default/aura/ConditionOfInterestListView/ConditionOfInterestListView.cmp
+++ b/force-app/main/default/aura/ConditionOfInterestListView/ConditionOfInterestListView.cmp
@@ -3,16 +3,59 @@
  -->
 
 <aura:component controller="ConditionOfInterestRemote" description="ConditionOfInterestListView">
-    <aura:attribute name="ConditionOfInterestList" type="Object[]"/>
-    <lightning:card footer="Card Footer" title="Hello">
-        <aura:set attribute="actions">
-            <lightning:button label="New"/>
-        </aura:set>
-        <aura:iteration items="{!v.ConditionOfInterestList}" var="CA">
-            {!CA}
-        </aura:iteration>
-        <aura:set attribute="footer">
-            <lightning:button label="New"/>
-        </aura:set>
-    </lightning:card>
+    <aura:attribute name="ConditionOfInterestList" type="Object[]" default="name"/>
+
+    <div class="slds-size--1-of-2 slds-max-small-size--1-of-1 slds-medium-size--1-of-1 slds-large-size--1-of-2 slds-p-right--small">
+        <div class="slds-grid slds-wrap">
+            <aura:if isTrue="{!!empty(v.ConditionOfInterestList)}">
+                <aura:iteration items="{!v.ConditionOfInterestList}" var="coi">
+                    <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-1">
+                        <div class="slds-pill slds-container--fluid">
+                            <div class="slds-pill__label slds-p-left--medium">{!coi}</div>
+                            <div class="slds-float--right">
+                                <lightning:buttonIcon iconName="utility:down" size="small"
+                                                      onclick="{! c.handleClick }" variant="bare"
+                                                      alternativeText="down"/>
+                                <lightning:buttonIcon iconName="utility:up" variant="bare"
+                                                      size="small" onclick="{! c.handleClick }"
+                                                      alternativeText="up"/>
+                                <lightning:buttonIcon iconName="utility:close"  variant="bare"
+                                                      size="large" title="close"
+                                                      alternativeText="Delete COI"/>
+                            </div>
+                        </div>
+                    </div>
+                </aura:iteration>
+                <aura:set attribute="else">
+                    <div class="slds-pill slds-container--fluid">
+                        <div class="slds-pill__label slds-p-left--medium slds-color__text_gray-5">No conditions selected</div>
+                    </div>
+                </aura:set>
+            </aura:if>
+
+            <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-1">
+                <button class="apollo-btn primary slds-float--right slds-m-top--medium slds-p-bottom--medium" id="0"
+                        onclick="{!c.doSelect}">
+                    Select Conditions
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="slds-size--1-of-2 slds-max-small-size--1-of-1 slds-medium-size--1-of-1 slds-large-size--1-of-2 slds-align-bottom slds-p-top--medium slds-p-bottom--small slds-p-left--large">
+        <aura:if isTrue="{!!empty(v.ConditionOfInterestList)}">
+            <aura:if isTrue="{!lessthan(v.ConditionOfInterestList.length, 5)}">
+                <div class="slds-text-color--error">
+                    Max 5 conditions - still active
+                </div>
+            </aura:if>
+            <aura:if isTrue="{!v.ConditionOfInterestList.length == 5}">
+                <div class="slds-text-color--error">
+                    Still active as the validation will be done within the modal
+                </div>
+            </aura:if>
+        </aura:if>
+
+    </div>
+
+    <c:SearchConditionsOfInterest aura:id="searchModal" therapeuticAreas="{!v.ConditionOfInterestList}"/>
 </aura:component>
