--- a/force-app/main/default/aura/MyReferredZone/MyReferredZone.cmp
+++ b/force-app/main/default/aura/MyReferredZone/MyReferredZone.cmp
@@ -46,6 +46,7 @@
                        sortType="{!v.sortBy}"
                        sortVariants="{!v.sortOptions}"
                        allRecordsCount="{!v.allObjects.length}"
+                       currentPageCount="{!v.entriesOnPage}"
                        itemTitle="{!if(v.userMode == 'PI', $Label.c.PG_MRZ_L_clinics, $Label.c.PG_MRZ_L_study_sites)}" >
 
             <c:rrSelect value="{!v.statusFilter}" options="{!v.statusOptions}" placeholder="{!v.statusFilterPlaceholder}" otherOptionLabel="{!$Label.c.PG_MRZ_L_No_filter}"/>
