--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.cmp
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.cmp
@@ -62,7 +62,9 @@
                            recordsPerPageVariants="{!v.paginationData.recordCountVariants}"
                            sortType="{!v.peFilter.sortType}"
                            sortVariants="{!v.peFilterData.sortVariants}"
-                           allRecordsCount="{!v.paginationData.allRecordsCount}">
+                           allRecordsCount="{!v.paginationData.allRecordsCount}"
+                           currentPageCount="{!v.paginationData.currentPageCount}">
+
                 <aura:if isTrue="{!v.studyFilterEnabled}">
                     <c:rrSelect value="{!v.peFilter.study}" options="{!v.peFilterData.studies}" placeholder="{!$Label.c.PG_MRRL_L_Studies}" useSentenceFont="false" disabled="{!not(empty(v.peFilter.searchText))}"/>
                 </aura:if>
